# autoencoders

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  environment.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
autoencoders/: __init__.py  base.py  callbacks.py  compare.py  constants.py  data.py  eval.py  modules.py  plot.py  plots.py  train.py  utils.py
autoencoders/conf/: comps.yaml  config.yaml
autoencoders/conf/callbacks/: default.yaml  encoder.yaml
autoencoders/conf/data/: mnist.yaml  sidae.yaml  sidae2.yaml  simsiam.yaml
autoencoders/conf/experiment/: base_cyclic.yaml  simsiam-resnet.yaml  simsiam.yaml
autoencoders/conf/model/: base.yaml  base_dae.yaml  cnn_ae.yaml  cnn_dae.yaml  deep_ae.yaml  deep_dae.yaml  sidae.yaml  sidae2.yaml  simsiam.yaml  vae.yaml
autoencoders/conf/trainer/: default.yaml
autoencoders/models/: base.py  base_dae.py  cnn_ae.py  deep_ae.py  sidae.py  simsiam.py  vae.py
notebooks/: demo.ipynb  simsiam_repres.ipynb
outputs/: .gitignore  comps.json  results.json  results.txt
outputs/DAE/train/2023-08-29/21-19-54/.hydra/: hydra.yaml  overrides.yaml
outputs/DAE/train/2023-08-29/21-19-54/checkpoints/: best_k_models.yaml
outputs/DAE/train/2023-09-09/14-08-48/.hydra/: config.yaml  hydra.yaml
outputs/DAE/train/2023-09-09/14-08-48/checkpoints/: best_k_models.yaml
outputs/SiDAE/train/2023-09-05/21-54-15/.hydra/: config.yaml  hydra.yaml
outputs/SiDAE/train/2023-09-05/21-54-15/checkpoints/: best_k_models.yaml
outputs/SiDAE/train/2023-09-05/22-01-36/.hydra/: hydra.yaml
outputs/SiDAE/train/2023-09-05/22-01-36/checkpoints/: best_k_models.yaml
outputs/SiDAE/train/2023-09-15/16-09-21/.hydra/: config.yaml  hydra.yaml
outputs/SiDAE/train/multirun/: multirun.yaml
(+146 files in other folders)
